<resources>
    <string name="app_name">Demo Dynamic ListView Colour List</string>
    <string name="btnAddColour">ADD NEW COLOUR</string>
    <string name="editEnterColour">Enter new colour</string>
    <string name="colourRed">Red</string>
    <string name="colourOrange">Orange</string>
    <string name="hintPosition">Enter position number</string>
    <string name="btnRemoveColour">Remove A Colour</string>
    <string name="btnUpdateColour">Update a Colour</string>
</resources>